--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,11 @@
 /*  your css code here. If applicable */
+div::before{
+	color:rgb(255,0,0);
+	content: "Before Element";
+	
+}
+div::after{
+	color:rgb(255,0,0);
+	content:"After Element";
+	
+}
